--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent {
         node {
-            label "jenkinsbuild2"
+            label "javabuildserver2"
         }
     }
     environment {
