--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline{
       }
        stage ("Sonar Analysis") {
             environment {
-               scannerHome = tool 'sonarqube scanner'
+               scannerHome = tool 'sonarscanner'
             }
             steps {
                 withSonarQubeEnv('sonarqube server') {    
