sonar properties fie modified name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.projectKey=sonarqube
+sonar.projectKey=twittertrend_buildanalsis
 sonar.organization=twittertrend
 sonar.projectName=buildanalsis
 sonar.language=java
